test/bad/generics/call01.px

func f<T>(x: T, y: T): Void def
    return

f(0, '0')
